flicker fix

--- a/src/Styles/Book.css
+++ b/src/Styles/Book.css
@@ -16,12 +16,6 @@
   height: 100%;
   margin: auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-
-  -webkit-backface-visibility: hidden; 
-  backface-visibility: hidden;        
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  will-change: transform;
 }
 
 .book-page{
